--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,8 @@
                 </div>
                 <div class="col-sm">
                     <figure>
-                        <img src="assets/images/cyber.jpg" alt="cyber" class="portfolioImages">
+                        <a href="#">
+                        <img src="assets/images/cyber.jpg" alt="cyber" class="portfolioImages"></a>
                         <figcaption>Project 2</figcaption>
                     </figure>
                 </div>
@@ -63,13 +64,15 @@
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <img src="assets/images/security.jpg" alt="construction docs" class="portfolioImages">
+                        <a href="#">
+                        <img src="assets/images/security.jpg" alt="construction docs" class="portfolioImages"></a>
                         <figcaption>Project 3</figcaption>
                     </figure>
                 </div>
                 <div class="col-sm">
                     <figure>
-                        <img src="assets/images/tech.jpg" alt="cyber" class="portfolioImages">
+                        <a href="#">
+                        <img src="assets/images/tech.jpg" alt="cyber" class="portfolioImages"></a>
                         <figcaption> Project 4</figcaption>
                     </figure>
                 </div>
@@ -80,19 +83,19 @@
 
         <!-- social media icons -->
         <div class="col-sm-3" id="socialIcons">
-            <h2>Social Media</h2>
-            <hr>
-            <div class="col-sm">
-                    <a href="#"><img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45"></a>
+                <h2>Social Media</h2>
+                <hr>
+                <div class="col-sm">
+                    <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank"><img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45"></a>
                 </div>
                 <div class="col-sm">
-                    <a href="#"><img src="assets/images/github2-dreamstale35.png" alt="linkedin" class="social-github2-dreamstale35"></a>
+                    <a href="https://github.com/lauras5" target="_blank"><img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35"></a>
                 </div>
                 <div class="col-sm">
-                    <a href="#"><img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53"></a>
-                </div>
+                    <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank"><img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53"></a>
+                </div>        
             <!-- social media icons -->
-        </div>
+            </div>
         <div class="col-sm-2"></div>
     </div>
 
