--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <h2>Social Media</h2>
             <hr>
             <div class="col-sm">
-                <a href="#"><img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45"></a>
+                <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank"><img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45"></a>
             </div>
             <div class="col-sm">
-                <a href="#"><img src="assets/images/github2-dreamstale35.png" alt="linkedin" class="social-github2-dreamstale35"></a>
+                <a href="https://github.com/lauras5" target="_blank"><img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35"></a>
             </div>
             <div class="col-sm">
-                <a href="#"><img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53"></a>
+                <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank"><img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53"></a>
             </div>
 
         </div>
