went back to update a few things and add links now that I have more in my portfolio

--- a/content.html
+++ b/content.html
@@ -57,6 +57,7 @@
                         <label for="message">Message</label>
                         <textarea type="text" class="form-control" rows="4" id="message" placeholder="Write here..."></textarea>
                     </div>
+                    <button class = "submit-btn">Submit</button>
                 </form>
 
         </div>
