--- a/portfolio.html
+++ b/portfolio.html
@@ -48,32 +48,32 @@
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <a href="#">
+                        <a href="https://lauras5.github.io/Gem-Game/">
                         <img src="assets/images/construction.jpg" alt="construction docs" class="portfolioImages"></a>
-                        <figcaption>Project 1</figcaption>
+                        <figcaption>Gem Game</figcaption>
                     </figure>
                 </div>
                 <div class="col-sm">
                     <figure>
-                        <a href="#">
+                        <a href="https://lauras5.github.io/Hangman-Game/">
                         <img src="assets/images/cyber.jpg" alt="cyber" class="portfolioImages"></a>
-                        <figcaption>Project 2</figcaption>
+                        <figcaption>Hangman Game</figcaption>
                     </figure>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <a href="#">
+                        <a href="https://lauras5.github.io/week-4-game/">
                         <img src="assets/images/security.jpg" alt="construction docs" class="portfolioImages"></a>
-                        <figcaption>Project 3</figcaption>
+                        <figcaption>RPG Game</figcaption>
                     </figure>
                 </div>
                 <div class="col-sm">
                     <figure>
                         <a href="#">
                         <img src="assets/images/tech.jpg" alt="cyber" class="portfolioImages"></a>
-                        <figcaption> Project 4</figcaption>
+                        <figcaption>Trivia Game</figcaption>
                     </figure>
                 </div>
             </div>
