--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>About Me</h2>
             <hr>
             <img class="img-responsive img-circle" id="profilePic" src="assets/images/profile-pic.png" alt="profile image">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident sapiente perferendis cum expedita eos reiciendis quod qui modi autem. In, aliquam eius! Dolores distinctio dicta nostrum rerum officia soluta!Expedita in quia quis amet quibusdam voluptas at accusantium adipisci dolore consectetur, saepe illum dolorem consequuntur ut voluptatibus ipsam veritatis rem dolores magni unde, ex repudiandae. Mollitia illum perferendis cupiditate.</p>
+            <p>I’m a full stack developer with a background in art and interior design. Odd combination, I know, but I’ve actually found that it’s given me an advantage when it comes to front end design and UI development since it requires an eye for design. I am really passionate about both front-end and back-end development, but I have to say that my true strengths lie in back-end development and server side applications. I love to learn and I am also taking classes to learn more about cyber security.I’m making a full transition to web design at the moment, and I would really appreciate any advice or opportunities you have to share. </p>
         </div>
 
         <!-- social media icons -->
