cleaning code, edit portfolio

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>About Me</h2>
             <hr>
             <img class="img-responsive img-circle" id="profilePic" src="assets/images/profile-pic.png" alt="profile image">
-            <p>&emsp; I’m a full stack developer with a background in art and interior design. I’ve found that my unique background has given me an advantage when it comes to working in front end design and UI development, because both require an eye for design and attention to detail.</p>
+            <p>&emsp; I’m a full stack developer with a background in art and interior design. I’ve found that my unique background has given me an advantage when it comes to working in front end design and UI development, because both require problem solving skills, trend forecasting and attention to detail.</p>
             <p>&emsp; I am really passionate about both front-end and back-end development, but I have to say that my true strengths lie in back-end development and server side applications. I love to learn and I am also taking classes to learn more about cyber security.I’m making a full transition to web design at the moment, and I would really appreciate any advice or opportunities you have to share. </p>
         </div>
 
