--- a/portfolio.html
+++ b/portfolio.html
@@ -48,39 +48,60 @@
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <a href="https://lauras5.github.io/Gem-Game/">
-                        <img src="assets/images/construction.jpg" alt="construction docs" class="portfolioImages"></a>
-                        <figcaption>Gem Game</figcaption>
+                        <a href="https://lauras5.github.io/Get-a-Gif/">
+                            <img src="assets/images/getagif.jpg" alt="gif app" class="portfolioImages">
+                        </a>
+                        <figcaption>Get-a-Gif App</figcaption>
                     </figure>
                 </div>
                 <div class="col-sm">
                     <figure>
-                        <a href="https://lauras5.github.io/Hangman-Game/">
-                        <img src="assets/images/cyber.jpg" alt="cyber" class="portfolioImages"></a>
-                        <figcaption>Hangman Game</figcaption>
+                        <a href="https://lauras5.github.io/Gem-Game/" target='_blank'>
+                            <img src="assets/images/construction.jpg" alt="construction docs" class="portfolioImages">
+                        </a>
+                        <figcaption>Gem Game</figcaption>
                     </figure>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <a href="https://lauras5.github.io/week-4-game/">
-                        <img src="assets/images/security.jpg" alt="construction docs" class="portfolioImages"></a>
+                        <a href="https://lauras5.github.io/week-4-game/" target='_blank'>
+                            <img src="assets/images/rpg.jpg" alt="rpg game" class="portfolioImages">
+                        </a>
                         <figcaption>RPG Game</figcaption>
                     </figure>
                 </div>
                 <div class="col-sm">
                     <figure>
-                        <a href="#">
-                        <img src="assets/images/tech.jpg" alt="cyber" class="portfolioImages"></a>
+                        <a href="https://lauras5.github.io/TriviaGame/" target='_blank'>
+                            <img src="assets/images/trivia.jpg" alt="trivia" class="portfolioImages">
+                        </a>
                         <figcaption>Trivia Game</figcaption>
                     </figure>
                 </div>
             </div>
-            
+            <div class="row">
+                <div class="col-sm">
+                    <figure>
+                        <a href="https://lauras5.github.io/NetworkAGo/">
+                            <img src="assets/images/security.jpg" alt="cyber" class="portfolioImages">
+                        </a>
+                        <figcaption>Trivia Game</figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm">
+                    <figure>
+                        <a href="https://lauras5.github.io/Hangman-Game/" target='_blank'>
+                            <img src="assets/images/cyber.jpg" alt="hangman" class="portfolioImages">
+                        </a>
+                        <figcaption>Hangman Game</figcaption>
+                    </figure>
+                </div>
             </div>
-        </div>            
-
+        </div>
+    </div>            
+        
         <!-- social media icons -->
         <div class="col-sm-3" id="socialIcons">
                 <h2>Social Media</h2>
