updated portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <a href="https://lauras5.github.io/Get-a-Gif/">
+                        <a href="https://lauras5.github.io/Get-a-Gif/" target='_blank'>
                             <img src="assets/images/getagif.jpg" alt="gif app" class="portfolioImages">
                         </a>
                         <figcaption>Get-a-Gif App</figcaption>
@@ -57,7 +57,7 @@
                 <div class="col-sm">
                     <figure>
                         <a href="https://lauras5.github.io/Gem-Game/" target='_blank'>
-                            <img src="assets/images/construction.jpg" alt="construction docs" class="portfolioImages">
+                            <img src="assets/images/gemgame.jpg" alt="gem game" class="portfolioImages">
                         </a>
                         <figcaption>Gem Game</figcaption>
                     </figure>
@@ -84,8 +84,8 @@
             <div class="row">
                 <div class="col-sm">
                     <figure>
-                        <a href="https://lauras5.github.io/NetworkAGo/">
-                            <img src="assets/images/security.jpg" alt="cyber" class="portfolioImages">
+                        <a href="https://lauras5.github.io/NetworkAGo/" target='_blank'>
+                            <img src="assets/images/mountain.jpeg" alt="Network-a-Go" class="portfolioImages">
                         </a>
                         <figcaption>Trivia Game</figcaption>
                     </figure>
@@ -93,7 +93,7 @@
                 <div class="col-sm">
                     <figure>
                         <a href="https://lauras5.github.io/Hangman-Game/" target='_blank'>
-                            <img src="assets/images/cyber.jpg" alt="hangman" class="portfolioImages">
+                            <img src="assets/images/hangman.jpg" alt="hangman" class="portfolioImages">
                         </a>
                         <figcaption>Hangman Game</figcaption>
                     </figure>
