--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                 <div class="col-sm">
                     <figure>
                         <a href="https://lauras5.github.io/TriviaGame/" target='_blank'>
-                            <img src="assets/images/trivia.jpg" alt="trivia" class="portfolioImages">
+                            <img src="assets/images/trivia.jpeg" alt="trivia" class="portfolioImages">
                         </a>
                         <figcaption>Trivia Game</figcaption>
                     </figure>
