--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <div class="col-sm">
                     <figure>
                         <a href="https://lauras5.github.io/Get-a-Gif/" target='_blank'>
-                            <img src="assets/images/getagif.jpg" alt="gif app" class="portfolioImages">
+                            <img src="assets/images/gif.jpg" alt="gif app" class="portfolioImages">
                         </a>
                         <figcaption>Get-a-Gif App</figcaption>
                     </figure>
