--- a/content.html
+++ b/content.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- bootstrap stylesheet -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <!-- my css stylesheet -->
     <link rel="stylesheet" href="assets/style/style.css">
     <!-- google fonts -->
@@ -12,82 +14,82 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap Portfolio</title>
 </head>
+
 <body>
-
-<div class="container-fluid">
-    <div class="row" id="header">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-            <!-- navbar -->
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="navbar-brand"><h1>LAURA SALCIDO</h1></div>
-                <hr>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="content.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="container-fluid">
+        <div class="row" id="topMenu">
+            <div class="col-md">
+                <!-- navbar -->
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="navbar-brand">
+                        <p id='navName'>
+                            <h4>LAURA SALCIDO</h4>
+                        </p>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-md">
+                <nav id='navContent' class='navbar navbar-expand-lg navbar-light'>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="portfolio.html" class="nav-link">Portfolio</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="content.html" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <!-- main content -->
-        <div class="col-sm-5" id="mainContent">
-                <h2>Contact</h2>
-                <hr>
-                
+        <div class="row">
+            <div class="jumbotron">
+                <h2>CONTACT INFO</h2>
+            </div>
+        </div>
+        <div class="row">
+            <!-- main content -->
+            <div class="col-md" id="mainContent">
                 <form>
                     <div class="form-group">
-                        <label for="inputName">Name</label>
+                        <label for="inputName">Name : </label>
                         <input type="text" class="form-control" id="inputName" placeholder="John Doe">
                     </div>
                     <div class="form-group">
-                      <label for="inputEmail">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="inputEmail">Email Address : </label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <label for="message">Message</label>
+                        <label for="message">Message : </label>
                         <textarea type="text" class="form-control" rows="4" id="message" placeholder="Write here..."></textarea>
                     </div>
-                    <button class = "submit-btn">Submit</button>
+                    <button class="submit-btn" id='submitBTN'>SUBMIT</button>
                 </form>
-
-        </div>
-        <!-- social media icons -->
-        <div class="col-sm-3" id="socialIcons">
-                <h2>Social Media</h2>
-                <hr>
-            <div class="row">
-                <div class="col-sm-4">
-                    <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank"><img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45"></a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="https://github.com/lauras5" target="_blank"><img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35"></a>
-                </div>
-                <div class="col-sm-4">
-                    <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank"><img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53"></a>
-                </div>
             </div>
-            <!-- social media icons -->
         </div>
-        <div class="col-sm-2"></div>
-    </div>
 
-    <div class="row">
-    <div class="footer">
-        &copy; Copyright Laura Salcido 2018
-    </div>
-    </div>
+        <div class="row">
+            <div class="footer">
+                &copy; Copyright Laura Salcido 2018
 
-</div>
+                <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank">
+                    <img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45">
+                </a>
+
+                <a href="https://github.com/lauras5" target="_blank">
+                    <img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35">
+                </a>
+
+                <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank">
+                    <img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53">
+                </a>
+            </div>
+        </div>
+    </div>
 
 </body>
+
 </html>
