--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- bootstrap stylesheet -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <!-- my css stylesheet -->
     <link rel="stylesheet" href="assets/style/style.css">
     <!-- google fonts -->
@@ -12,122 +14,133 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap Portfolio</title>
 </head>
+
 <body>
-
-<div class="container-fluid">
-    <div class="row" id="header">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-            <!-- navbar -->
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="navbar-brand"><h1>LAURA SALCIDO</h1></div>
-                <hr>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="portfolio.html" class="nav-link">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="content.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="container-fluid">
+        <div class="row" id="topMenu">
+            <div class="col-md">
+                <!-- navbar -->
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="navbar-brand">
+                        <p id='navName'>
+                            <h4>LAURA SALCIDO</h4>
+                        </p>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-md">
+                <nav id='navContent' class='navbar navbar-expand-lg navbar-light'>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="portfolio.html" class="nav-link">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="content.html" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </div>
-
     <div class="row">
-        <div class="col-sm-2"></div>
+        <div class="jumbotron">
+            <h2>PORTFOLIO</h2>
+        </div>
+    </div>
+    <div class="row">
         <!-- main content -->
-        <div class="col-sm-5" id="mainContent">
-            <h2>Portfolio</h2>
-            <hr>
+        <div class="col-md" id="mainContentPortfolio">
             <div id="portfolio">
-            
-            <div class="row">
-                <div class="col-sm">
-                    <figure>
-                        <a href="https://lauras5.github.io/Get-a-Gif/" target='_blank'>
-                            <img src="assets/images/gif.jpg" alt="gif app" class="portfolioImages">
-                        </a>
-                        <figcaption>Get-a-Gif App</figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm">
-                    <figure>
-                        <a href="https://lauras5.github.io/Gem-Game/" target='_blank'>
-                            <img src="assets/images/gemgame.jpg" alt="gem game" class="portfolioImages">
-                        </a>
-                        <figcaption>Gem Game</figcaption>
-                    </figure>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <figure>
-                        <a href="https://lauras5.github.io/week-4-game/" target='_blank'>
-                            <img src="assets/images/rpg.jpg" alt="rpg game" class="portfolioImages">
-                        </a>
-                        <figcaption>RPG Game</figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm">
-                    <figure>
-                        <a href="https://lauras5.github.io/TriviaGame/" target='_blank'>
-                            <img src="assets/images/trivia.jpeg" alt="trivia" class="portfolioImages">
-                        </a>
-                        <figcaption>Trivia Game</figcaption>
-                    </figure>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm">
-                    <figure>
-                        <a href="https://lauras5.github.io/NetworkAGo/" target='_blank'>
-                            <img src="assets/images/mountain.jpeg" alt="Network-a-Go" class="portfolioImages">
-                        </a>
-                        <figcaption>Trivia Game</figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm">
-                    <figure>
-                        <a href="https://lauras5.github.io/Hangman-Game/" target='_blank'>
-                            <img src="assets/images/hangman.jpg" alt="hangman" class="portfolioImages">
-                        </a>
-                        <figcaption>Hangman Game</figcaption>
-                    </figure>
+                <div class="row" id='PRows'>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/Get-a-Gif/" target='_blank'>
+                                <img src="assets/images/gifapp.jpg" alt="gif app" class="portfolioImages">
+                            </a>
+                            <figcaption>Get-a-Gif App</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/Gem-Game/" target='_blank'>
+                                <img src="assets/images/gemgame.jpg" alt="gem game" class="portfolioImages">
+                            </a>
+                            <figcaption>Gem Game</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/week-4-game/" target='_blank'>
+                                <img src="assets/images/rpggame.jpg" alt="rpg game" class="portfolioImages">
+                            </a>
+                            <figcaption>RPG Game</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/TriviaGame/" target='_blank'>
+                                <img src="assets/images/trivia.JPG" alt="trivia" class="portfolioImages">
+                            </a>
+                            <figcaption>Trivia Game</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/Firebase-Train/" target='_blank'>
+                                <img src="assets/images/firebasetrains.JPG" alt="train app" class="portfolioImages">
+                            </a>
+                            <figcaption>Train Tracker</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/Hangman-Game/" target='_blank'>
+                                <img src="assets/images/hangman.JPG" alt="hangman game" class="portfolioImages">
+                            </a>
+                            <figcaption>90's Hangman Game</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/CoCodeApp/" target='_blank'>
+                                <img src="assets/images/cocode.JPG" alt="cocode app" class="portfolioImages">
+                            </a>
+                            <figcaption>CoCode App</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md">
+                        <figure>
+                            <a href="https://lauras5.github.io/Psychic-Game/" target='_blank'>
+                                <img src="assets/images/psychic.JPG" alt="psychic game" class="portfolioImages">
+                            </a>
+                            <figcaption>Psychic Game</figcaption>
+                        </figure>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>            
-        
-        <!-- social media icons -->
-        <div class="col-sm-3" id="socialIcons">
-                <h2>Social Media</h2>
-                <hr>
-            <div class="row">
-                <div class="col-sm-4">
-                    <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank"><img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45"></a>
-                </div>
-                <div class="col-sm-4">
-                    <a href="https://github.com/lauras5" target="_blank"><img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35"></a>
-                </div>
-                <div class="col-sm-4">
-                    <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank"><img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53"></a>
-                </div>
-            </div>
-            <!-- social media icons -->
-        </div>
-        <div class="col-sm-2"></div>
     </div>
+    <div class="row">
+        <div class="footer">
+            &copy; Copyright Laura Salcido 2018
 
-<div class="row">
-    <div class="footer">
-       &copy; Copyright Laura Salcido 2018
+            <a href="https://www.linkedin.com/in/idlaurasalcido/" target="_blank">
+                <img src="assets/images/linkedin-dreamstale45.png" alt="linkedin" class="social-linkedin-dreamstale45">
+            </a>
+
+            <a href="https://github.com/lauras5" target="_blank">
+                <img src="assets/images/github2-dreamstale35.png" alt="github" class="social-github2-dreamstale35">
+            </a>
+
+            <a href=" https://stackoverflow.com/users/9036358/lauras5" target="_blank">
+                <img src="assets/images/overflow-dreamstale53.png" alt="linkedin" class="social-overflow-dreamstale53">
+            </a>
+        </div>
     </div>
-</div>
-</div>
 
 </body>
+
 </html>
