--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
                     <div class="col-md">
                         <figure>
                             <a href="https://lauras5.github.io/week-4-game/" target='_blank'>
-                                <img src="assets/images/rpggame.jpg" alt="rpg game" class="portfolioImages">
+                                <img src="assets/images/rpggame.JPG" alt="rpg game" class="portfolioImages">
                             </a>
                             <figcaption>RPG Game</figcaption>
                         </figure>
