--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
                     <div class="col-md">
                         <figure>
                             <a href="https://lauras5.github.io/Hangman-Game/" target='_blank'>
-                                <img src="assets/images/hangman.JPG" alt="hangman game" class="portfolioImages">
+                                <img src="assets/images/hangman.jpg" alt="hangman game" class="portfolioImages">
                             </a>
                             <figcaption>90's Hangman Game</figcaption>
                         </figure>
