--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="col-md-12">
             <div class="jumbotron">
                 <h1>LAURA SALCIDO</h1>
-                <img class="img-responsive img-circle" id="profilePic" src="assets/images/profile-pic.png" alt="profile image">
+                <img class="img-responsive img-circle" id="profilePic" src="assets/images/pro.jpg" alt="profile image">
                 <h3>Full-Stack Web Developer</h3>
 
             </div>
