--- a/index.html
+++ b/index.html
@@ -67,12 +67,7 @@
         <div class="col-md-5">
             <h2>About Me</h2>
             <div id="mainContent">
-                <p>&emsp; I’m a full stack developer with a background in art and interior design. I’ve found that my unique
-                    background has given me an advantage when it comes to working in front end design and UI development,
-                    because both require problem solving skills, trend forecasting and attention to detail.</p>
-                <p>&emsp; I am really passionate about both front-end and back-end development, and I want to keep learning.
-                    I love to learn and I am also taking classes to learn more about cyber security.I’m making a full transition
-                    to web design at the moment, and I would really appreciate any advice or opportunities you have to share.</p>
+                <p>&emsp; My fist experience as a developer had to be when I would edit mine and my friends Myspace pages in order to have to coolest songs and background. My favorite things about programming are that no matter how good you are, you can always learn something new, there is no ceiling to how much you can learn. I also like the problem solving aspect of it. </p>
             </div>
         </div>
         <div class="col-md-5">
