--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="col-md">
                 <!-- navbar -->
                 <nav class="navbar navbar-expand-lg navbar-light">
+                    <img class="img-responsive img-circle" id="profilePic" src="assets/images/pro.jpg" alt="profile image">
                     <div class="navbar-brand">
                         <p id='navName'>
                             <h4>LAURA SALCIDO</h4>
@@ -54,9 +55,8 @@
         <div class="col-md-12">
             <div class="jumbotron">
                 <h1>LAURA SALCIDO</h1>
-                <img class="img-responsive img-circle" id="profilePic" src="assets/images/pro.jpg" alt="profile image">
-                <h3>Full-Stack Web Developer</h3>
-
+                <!-- <img class="img-responsive img-circle" id="profilePic" src="assets/images/pro.jpg" alt="profile image">
+                <h3>Full-Stack Web Developer</h3> -->
             </div>
         </div>
     </div>
@@ -64,13 +64,21 @@
     <div class="row">
         <div class="col-md-1"></div>
         <!-- main content -->
-        <div class="col-md-5">
+        <div class="col-md">
             <h2>About Me</h2>
             <div id="mainContent">
-                <p>&emsp; My fist experience as a developer had to be when I would edit mine and my friends Myspace pages in order to have to coolest songs and background. My favorite things about programming are that no matter how good you are, you can always learn something new, there is no ceiling to how much you can learn. I also like the problem solving aspect of it. </p>
+                <p>&emsp; My fist experience as a developer had to be when I would edit mine and my friends Myspace pages in
+                    order to have to coolest songs and background. My favorite things about programming are that no matter
+                    how good you are, you can always learn something new, there is no ceiling to how much you can learn.
+                    I also like the problem solving aspect of it. </p>
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-1"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md">
             <h2 id='langTitle'>Languages</h2>
             <div id="languages">
                 <ul>
@@ -81,6 +89,9 @@
                     <li>SQL</li>
                 </ul>
             </div>
+        </div>
+        
+        <div class="col-md">
             <h2 id='hobTitle'>Hobbies</h2>
             <div id="hobbies">
                 <ul>
@@ -110,7 +121,7 @@
             </a>
         </div>
     </div>
-</div>
+    </div>
 
 </body>
 
