--- a/portfolio.html
+++ b/portfolio.html
@@ -21,12 +21,13 @@
             <div class="col-md">
                 <!-- navbar -->
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="navbar-brand">
-                        <p id='navName'>
-                            <h4>LAURA SALCIDO</h4>
-                        </p>
-                    </div>
-                </nav>
+                        <img class="img-responsive img-circle" id="profilePic" src="assets/images/pro.jpg" alt="profile image">
+                        <div class="navbar-brand">
+                            <p id='navName'>
+                                <h4>LAURA SALCIDO</h4>
+                            </p>
+                        </div>
+                    </nav>
             </div>
             <div class="col-md">
                 <nav id='navContent' class='navbar navbar-expand-lg navbar-light'>
@@ -47,7 +48,7 @@
     </div>
     <div class="row">
         <div class="jumbotron">
-            <h2>PORTFOLIO</h2>
+            <h2 id='proh2'>PORTFOLIO</h2>
         </div>
     </div>
     <div class="row">
